# edx-greeter

./: pyproject.toml
edx_greeter/: __init__.py  admin.py  apps.py  models.py  utils.py
edx_greeter/migrations/: 0001_initial.py
edx_greeter/rest_api/: urls.py
edx_greeter/rest_api/v1/: serializers.py  urls.py  views.py
