[tool.poetry]
name = "edx-greeter"
version = "0.1.0"
description = ""
authors = ["Jarosław Wygoda <jaroslaw@wygoda.me>"]
packages = [{include = "edx_greeter"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "<4"

[tool.poetry.group.dev.dependencies]
tutor = "^15.3.1"
black = "^23.1.0"
pre-commit = "^3.1.1"
ruff = "^0.0.253"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."lms.djangoapp"]
"edx_greeter" = "edx_greeter.apps:EdxGreeterConfig"

[tool.poetry.plugins."cms.djangoapp"]
"edx_greeter" = "edx_greeter.apps:EdxGreeterCMSConfig"
